fix bug on select version mobile and desktop

--- a/src/components/Creator/CharacterChoices/characterChoices.scss
+++ b/src/components/Creator/CharacterChoices/characterChoices.scss
@@ -3,6 +3,18 @@
 .choices {
   display: flex;
   flex-direction: column;
+
+  &__name, &__race, &__subrace, &__classe, &__background{
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  &__label {
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: vars.$gutter;
+    width: 150px;
+  }
  
   &__main--title{
     // margin-top: 12vw;
@@ -35,6 +47,18 @@
       display: flex;
       flex-direction: column;
       justify-content: space-around;
+    }
+  }
+  .choices {
+    &__name, &__race, &__subrace, &__classe, &__background {
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    } 
+    &__label {
+      width: 400px;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 }
